GNOME Bugzilla – Bug 645123
[PATCH] Fix the location of gnome-version.xml
Last modified: 2011-11-11 10:03:55 UTC
gnome-desktop 2 installed gnome-version.xml in DATADIR/gnome-about/, but in gnome-desktop 3.0 it was moved to DATADIR/gnome/.
Created attachment 183707 [details] [review] Fix the location of gnome-version.xml as installed by latest gnome-desktop 3.0
Review of attachment 183707 [details] [review]: Looks good. I'll commit tonight before the release if you don't get to it first. Thanks.