Fix the location of gnome-version.xml

Latest gnome-desktop 3.0 installs gnome-version.xml in DATADIR/gnome/.

https://bugzilla.gnome.org/show_bug.cgi?id=645123